cmake_minimum_required(VERSION 3.28)
project(DataStructure C)

set(CMAKE_C_STANDARD 11)

add_executable(SequenceList Lists/SequenceList.c)
add_executable(SinglyLinkedListWithHeadNode Lists/SinglyLinkedListWithHeadNode.c)
add_executable(SinglyLinkedListWithoutHeadNode Lists/SinglyLinkedListWithoutHeadNode.c)
add_executable(DoublyLinkedListWithoutHeadNode Lists/DoublyLinkedListWithoutHeadNode.c)
add_executable(DoublyLinkedListWithHeadNode Lists/DoublyLinkedListWithHeadNode.c)
add_executable(CircularSinglyLinkedListWithHeadNode Lists/CircularSinglyLinkedListWithHeadNode.c)
add_executable(CircularSinglyLinkedListWithoutHeadNode Lists/CircularSinglyLinkedListWithoutHeadNode.c)
add_executable(CircularDoublyLinkedListWithHeadNode Lists/CircularDoublyLinkedListWithHeadNode.c)
add_executable(CircularDoublyLinkedListWithoutHeadNode Lists/CircularDoublyLinkedListWithoutHeadNode.c)
