cmake_minimum_required(VERSION 3.28)
project(DataStructure C)

set(CMAKE_C_STANDARD 11)

add_executable(SequenceList List/SequenceList.c)
add_executable(SinglyLinkedListWithHeadNode List/SinglyLinkedListWithHeadNode.c)
add_executable(SinglyLinkedListWithoutHeadNode List/SinglyLinkedListWithoutHeadNode.c)
add_executable(DoublyLinkedListWithoutHeadNode List/DoublyLinkedListWithoutHeadNode.c)
add_executable(DoublyLinkedListWithHeadNode List/DoublyLinkedListWithHeadNode.c)
add_executable(CircularSinglyLinkedListWithHeadNode List/CircularSinglyLinkedListWithHeadNode.c)
add_executable(CircularSinglyLinkedListWithoutHeadNode List/CircularSinglyLinkedListWithoutHeadNode.c)
add_executable(CircularDoublyLinkedListWithHeadNode List/CircularDoublyLinkedListWithHeadNode.c)
add_executable(CircularDoublyLinkedListWithoutHeadNode List/CircularDoublyLinkedListWithoutHeadNode.c)
add_executable(SqStack Stack/SqStack.c)
add_executable(SharedStack Stack/SharedStack.c)
add_executable(LinkStack Stack/LinkStackWithoutHeader.c)
add_executable(LinkStackWithoutHeader Stack/LinkStackWithHeader.c)
